<resources>
    <string name="app_name">MyPet</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="usuarioinvalido">Correo o contraseña invalido</string>
    <string name="cargando">Cargando</string>
    <string name="iniciando">Iniciando</string>
    <string name="camposvacios">Rellene campos vacios</string>
    <string name="longitudinvalida">Clave debe contener mas de 6 caracteres</string>
    <string name="registamdo">Registrando</string>
    <string name="usuarioyaexiste">Usuario ya existe</string>
    <string name="registrado">Registrado</string>
    <string name="errorregistrando">Error registrando</string>
    <string name="contraseñanocoinciden">Contraseñas no coinciden</string>
    <string name="revisecorreo">Revise su correo</string>
    <string name="error">Ocurrio un error</string>
    <string name="perfil">Perfil</string>
    <string name="donacion">Donacion</string>
    <string name="ayuda">Ayuda</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="actualizar">Actualizar</string>
    <string name="mensaje_cerrar">¿Desea cerrar sesion?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="registrese">Registrese</string>
    <string name="ingreseemail">Ingrese Email</string>
    <string name="ingresecontrasena">Ingrese contraseña</string>
    <string name="repitacontrasena">Repita Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="recuperepass">Recupere Contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="iniciarS">Iniciar Sesion</string>
    <string name="mensajeolvido">¿Olvido su contraseña? Recuperela!</string>
    <string name="mensajeregistrese">¿No tiene una cuenta? Registrese!</string>
    <string name="seleccionarFoto">Seleccionar Foto</string>
    <string name="actualizado">Actualizado</string>
    <string name="primernombre">Primer nombre</string>
    <string name="segundonombre">Segundo nombre</string>
    <string name="primerapellido">Primer apellido</string>
    <string name="segundoapellido">Segundo apellido</string>
    <string name="dinero">Dinero</string>
    <string name="mantenersesion">Mantener Sesion</string>
    <string name="ok">Ok</string>
    <string name="hombre">Masculino</string>
    <string name="mujer">Femenino</string>
    <string name="anuncio">Advertencia</string>
    <string name="mensaje_advertencia">Funcionalidad en desarrollo</string>
    <string name="correoinvalido">Email no valido</string>
    <string-array name="genero">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
</resources>
