<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/perfil" />

        <item
            android:id="@+id/donacion"
            android:icon="@mipmap/ic_donacion"
            android:title="@string/donacion" />

        <item
            android:id="@+id/help"
            android:icon="@mipmap/ic_help"
            android:title="@string/ayuda" />

        <!-- Otra sección -->
        <item
            android:id="@+id/otra_section"
            android:title="@string/configuracion">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:icon="@mipmap/ic_logout"
                    android:title="@string/cerrarsesion" />
            </menu>
        </item>
    </group>

</menu>