<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:id="@+id/foto_profile_U"
        android:src="@mipmap/ic_profile"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:id="@+id/txtEmailPerfil"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/primernombre"
        android:id="@+id/txtDisplayName"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/segundonombre"
        android:id="@+id/txtSegundoNombrePerfil"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/primerapellido"
        android:id="@+id/txtApellidoPerfil"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/segundoapellido"
        android:id="@+id/txtSegundoApellidoPerfil"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genero"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/actualizarperfil"
        android:text="@string/actualizar"/>

</LinearLayout>